Updated and documented dependencies

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -32,9 +32,9 @@
   },
   "background": {
     "scripts": [
-      "browser-polyfill.min.js",
+      "browser-polyfill.js",
       "background/apache-mime-types.js",
-      "background/moment.min.js",
+      "background/moment.js",
       "background/turndown.js",
       "background/turndown-plugin-gfm.js",
       "/background/Readability.js",
