Getting context menus working again
So far they're all in, but only copy-markdown-link works
I had to do some workarounds and learn a bit more about content scripts in manifest v3
Also, Chrome won't give me the linkText from a right-clicked link? WTF?

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,8 +22,17 @@
     "sidePanel"
   ],
   "host_permissions": [
-    "*://*/*"
+    "<all_urls>"
   ],
+  "background": {
+    "scripts": [
+      "/shared/lib/browser-polyfill.js",
+      "/shared/options.js",
+      "/shared/context-menus.js",
+      "/background/bg-setup.js"
+    ],
+    "service_worker": "/background/bg-setup.js"
+  },
   "side_panel": {
     "default_path": "popup/popup.html"
   },
