--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,7 +25,7 @@
     "<all_urls>"
   ],
   "background": {
-    "scripts": [
+    "service_worker": [
       "/shared/lib/browser-polyfill.js",
       "/shared/options.js",
       "/shared/context-menus.js",
@@ -35,16 +35,6 @@
   },
   "side_panel": {
     "default_path": "popup/popup.html"
-  },
-  "sidebar_action": {
-    "default_title": "MarkDownload",
-    "default_panel": "popup/popup.html",
-    "default_icon": {
-      "16": "icons/favicon-16x16.png",
-      "32": "icons/favicon-32x32.png",
-      "48": "icons/favicon-48x48.png",
-      "128": "icons/appicon-128x128.png"
-    }
   },
   "action": {
     "default_title": "MarkDownload",
@@ -59,49 +49,5 @@
   "options_ui": {
     "page": "options/options.html",
     "open_in_tab": false
-  },
-  "commands": {
-    "_execute_browser_action": {
-      "suggested_key": {
-        "default": "Alt+Shift+M"
-      }
-    },
-    "download_tab_as_markdown": {
-      "suggested_key": {
-        "default": "Alt+Shift+D"
-      },
-      "description": "Save current tab as Markdown"
-    },
-    "copy_tab_as_markdown": {
-      "suggested_key": {
-        "default": "Alt+Shift+C"
-      },
-      "description": "Copy current tab as Markdown to the clipboard"
-    },
-    "copy_selection_as_markdown": {
-      "description": "Copy current selection as Markdown to the clipboard"
-    },
-    "copy_tab_as_markdown_link": {
-      "suggested_key": {
-        "default": "Alt+Shift+L"
-      },
-      "description": "Copy current tab URL as Markdown link to the clipboard"
-    },
-    "copy_selected_tab_as_markdown_link": {
-      "description": "Copy selected tabs URL as Markdown link to the clipboard"
-    },
-    "copy_selection_to_obsidian": {
-      "description": "Copy current selection as Markdown to Obsidian"
-    },
-    "copy_tab_to_obsidian": {
-      "description": "Copy current tab as Markdown to Obsidian"
-    }
-    
-  },
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "{1c5e4c6f-5530-49a3-b216-31ce7d744db0}",
-      "strict_min_version": "65.0"
-    }
   }
 }
